[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RxnScribe"
version = "1.0"
description = "RxnScribe"
authors = [{ name = "Yujie Qian", email = "yujieq@csail.mit.edu" }]
readme = "README.md"  # Update this if you use a different README format
license = { text = "MIT" }  # Adjust if your license is different
keywords = ["machine learning", "chemistry", "OCR"]  # Add relevant keywords

dependencies = [
    "torch",
    "numpy>=1.19.5",
    "pandas>=1.2.4",
    "matplotlib>=3.5.3",
    "opencv-python>=4.5.5.64",
    "pycocotools>=2.0.4",
    "pytorch-lightning>=1.8.6",
    "transformers>=4.5.1",
    "huggingface-hub>=0.11.0",
    "MolScribe @ git+https://github.com/CrystalEye42/MolScribe.git@250f683",
    "easyocr>=1.6.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rxnscribe*", "rxnscribe.inference*", "rxnscribe.pix2seq*", "rxnscribe.transformer*"]
