[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RxnScribe"
version = "1.0"
description = "RxnScribe"
authors = ["Yujie Qian <yujieq@csail.mit.edu>"]
readme = "README.md"
license = "MIT"
keywords = ["machine learning", "chemistry", "OCR"]
packages = [
    { include = "rxnscribe" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "*"
numpy = ">=1.19.5"
pandas = ">=1.2.4"
matplotlib = ">=3.5.3"
opencv-python = ">=4.5.5.64"
pycocotools = ">=2.0.4"
pytorch-lightning = ">=1.8.6"
transformers = ">=4.5.1"
huggingface-hub = ">=0.11.0"
molscribe = {git = "https://github.com/qbit-/MolScribe.git", optional = true}
easyocr = { version = ">=1.6.2", optional = true }

[tool.poetry.extras]
scribe = ["MolScribe"]
ocr = ["easyocr"]


